--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python: '3.5'
 install:
   - travis_retry pip install pytest
-  - travis_retry pip install .
+  - travis_retry python setup.py install
 script:
   - pytest
